made fixture panel not overlap other editor options

--- a/Plot/Components/Pages/FloorsetEditor/FloorsetEditor.razor.css
+++ b/Plot/Components/Pages/FloorsetEditor/FloorsetEditor.razor.css
@@ -11,7 +11,7 @@
 }
 
 .add-fixture-panel {
-    height: 55vh;
+    height: 100%;
 }
 
 .dimension {
